[package]
name = "ref_kind"
version = "0.4.2"
description = "Different reference kinds"
authors = ["tuguzT <timurka.tugushev@gmail.com>"]
repository = "https://github.com/toucan-rust/ref_kind"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["ref", "safe", "mutability", "no-std"]
categories = ["data-structures", "rust-patterns", "no-std"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies.hashbrown]
version = "0.12.3"
optional = true
default-features = false

[features]
default = ["std"]
alloc = []
std = ["alloc"]
hashbrown = ["dep:hashbrown"]
