[package]
name = "ref_kind"
version = "0.5.0"
description = "Different reference kinds"
authors = ["tuguzT <timurka.tugushev@gmail.com>"]
repository = "https://github.com/toucan-games/ref_kind"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["ref", "safe", "mutability", "no-std"]
categories = ["data-structures", "rust-patterns", "no-std"]
edition = "2021"

[dependencies]
hashbrown = { version = "0.14", default-features = false, optional = true }

[features]
default = ["std"]
alloc = []
std = ["alloc"]
hashbrown = ["dep:hashbrown"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
